small style fixes; try to prevent dark mode

--- a/_sass/Includes/images.sass
+++ b/_sass/Includes/images.sass
@@ -39,9 +39,9 @@
 
                 .image-description
                     position: absolute
-                    left: 2.5vw
+                    left: 0vw
                     bottom: 2.5vh
-                    padding: .5vh 1vw
-                    font-size: 1.25vmin
+                    padding: .5vh 3.5vw .75vh 2vw
+                    font-size: 1vmax
                     font-style: italic
                     background: $backgroundColor
